@@ -17,6 +17,7 @@ SVN
 -bug#0001557: Quotes in Text Format graph template field breaks graph
 -bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
 -bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
+-bug#0001609: Script server timeout too aggressive with 10 second poller interval
 -bug: When creating new graphs without a data source, print error to user instead of throwing php error
 -bug: Browser query string does not contain arguments
 -bug: inject_form_variables does not operate if more than 1 variable needs replacing
